--- a/style.css
+++ b/style.css
@@ -37,3 +37,52 @@ main form button {
 main form i {
   opacity: 0.7;
 }
+
+main .result {
+  padding-top: 20px;
+  text-align: center;
+}
+main .result .name {
+  font-weight: bold;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+main .temperature img {
+  width: 150px;
+  filter: drop-shadow(0 10px 50px #000);
+}
+main .temperature figcaption {
+  font-size: 3em;
+}
+main .description {
+  padding: 10px 0px 30px;
+}
+main ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+main li {
+  background-color: #f78a55;
+  color: #fff;
+  border-radius: 10px;
+  padding: 20px 10px;
+  background-image: linear-gradient(to bottom, transparent 50%, #0003 50%);
+  font-weight: bold;
+  font-size: small;
+}
+main li i {
+  font-size: 2em;
+  display: block !important;
+  margin: 20px 0;
+}
+main li:nth-child(2) {
+  background-color: #b56291;
+}
+main li:nth-child(3) {
+  background-color: #48567b;
+}
