--- a/style.css
+++ b/style.css
@@ -86,3 +86,23 @@ main li:nth-child(2) {
 main li:nth-child(3) {
   background-color: #48567b;
 }
+main.error {
+  animation: errorEffect 0.3s linear 1;
+}
+@keyframes errorEffect {
+  0% {
+    transform: translate(10px, 5px);
+  }
+  25% {
+    transform: translate(-5px, 0);
+  }
+  50% {
+    transform: translate(8px, 2px);
+  }
+  75% {
+    transform: translate(-2px, 5px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
