--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   font-family: sans-serif;
 }
 main {
+  position: relative;
   width: 300px;
   height: max-content;
   min-height: 300px;
@@ -105,4 +106,41 @@ main.error {
   100% {
     transform: translate(0, 0);
   }
+}
+
+#loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: White;
+  border-radius: 30px;
+  display: none;
+}
+#loading::before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 40px;
+  width: 40px;
+  border: 4px solid black;
+  border-block-start-color: transparent;
+  border-radius: 50%;
+  animation: loading 0.5s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(1turn);
+  }
+}
+
+#loading.visible {
+  display: block;
 }
