--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -11,6 +12,10 @@ body {
   background-image: linear-gradient(to bottom, #dcdcdc 50%, #e9e9e9 50%);
   font-family: sans-serif;
 }
+
+/*--------------------
+  Main 
+--------------------*/
 main {
   position: relative;
   width: 300px;
@@ -22,12 +27,17 @@ main {
   padding: 30px;
   box-sizing: border-box;
 }
+
+/*--------------------
+  Search Bar 
+--------------------*/
 main form {
   border: 1px solid #5553;
   display: flex;
   justify-content: space-between;
   border-radius: 30px;
 }
+
 main form input,
 main form button {
   border: none;
@@ -35,14 +45,19 @@ main form button {
   outline: none;
   padding: 10px;
 }
+
 main form i {
   opacity: 0.7;
 }
 
+/*--------------------
+  Weather Information 
+--------------------*/
 main .result {
   padding-top: 20px;
   text-align: center;
 }
+
 main .result .name {
   font-weight: bold;
   font-size: large;
@@ -51,22 +66,27 @@ main .result .name {
   align-items: center;
   gap: 10px;
 }
+
 main .temperature img {
   width: 150px;
   filter: drop-shadow(0 10px 50px #000);
 }
+
 main .temperature figcaption {
   font-size: 3em;
 }
+
 main .description {
   padding: 10px 0px 30px;
 }
+
 main ul {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
+
 main li {
   background-color: #f78a55;
   color: #fff;
@@ -76,20 +96,28 @@ main li {
   font-weight: bold;
   font-size: small;
 }
+
 main li i {
   font-size: 2em;
   display: block !important;
   margin: 20px 0;
 }
+
 main li:nth-child(2) {
   background-color: #b56291;
 }
+
 main li:nth-child(3) {
   background-color: #48567b;
 }
+
+/*--------------------
+  Error Animation 
+--------------------*/
 main.error {
   animation: errorEffect 0.3s linear 1;
 }
+
 @keyframes errorEffect {
   0% {
     transform: translate(10px, 5px);
@@ -108,6 +136,9 @@ main.error {
   }
 }
 
+/*--------------------
+  Loading Animation 
+--------------------*/
 #loading {
   position: absolute;
   top: 0;
@@ -118,6 +149,7 @@ main.error {
   border-radius: 30px;
   display: none;
 }
+
 #loading::before {
   position: absolute;
   content: "";
