--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,17 @@ main form button {
   border: none;
   background-color: transparent;
   outline: none;
-  padding: 10px;
+  padding-block: 10px;
+}
+
+main form input {
+  flex: 1;
+  padding-inline-start: 16px;
+}
+
+main form button {
+  padding-inline-start: 10px;
+  padding-inline-end: 16px;
 }
 
 main form i {
